--- a/index.html
+++ b/index.html
@@ -58,34 +58,33 @@
 					<h2>Homestyle Cooking Crafted for Sharing</h2>
 				</div>
 				<p>
-					Jeana's Kitchen is a family-run kitchen based in Malabon City,
-					known for generous party trays, delightful cakes, and
-					fully-customized catering spreads. From everyday gatherings to
-					milestone events, we prepare comfort dishes and desserts that
-					travel beautifully and taste like they were made at home.
+					Jeana's Kitchen is a family-run kitchen based in Malabon City, known
+					for generous party trays, delightful cakes, and fully-customized
+					catering spreads. From everyday gatherings to milestone events, we
+					prepare comfort dishes and desserts that travel beautifully and taste
+					like they were made at home.
 				</p>
 				<div class="about-grid">
 					<article>
 						<h3>Party Trays</h3>
 						<p>
-							Signature entrées and sides portioned for 8 to 10
-							guests—perfect for potlucks, office celebrations, and family
-							weekends.
+							Signature entrées and sides portioned for 8 to 10 guests—perfect
+							for potlucks, office celebrations, and family weekends.
 						</p>
 					</article>
 					<article>
 						<h3>Cakes & Desserts</h3>
 						<p>
-							Celebrate with bespoke cakes, cupcakes, and sweets
-							personalized to your theme, from rustic naked cakes to
-							decadent chocolate creations.
+							Celebrate with bespoke cakes, cupcakes, and sweets personalized to
+							your theme, from rustic naked cakes to decadent chocolate
+							creations.
 						</p>
 					</article>
 					<article>
 						<h3>Catering</h3>
 						<p>
-							From intimate gatherings to full-service receptions, let us
-							curate a menu that fits your tastes, budget, and schedule.
+							From intimate gatherings to full-service receptions, let us curate
+							a menu that fits your tastes, budget, and schedule.
 						</p>
 					</article>
 				</div>
