--- a/services.html
+++ b/services.html
@@ -55,7 +55,9 @@
 			<section class="section offerings" id="services">
 				<div class="section-heading">
 					<span class="eyebrow">What We Do</span>
-					<h2>Party Trays | Packed Meals | Celebration Cakes | Full Catering</h2>
+					<h2>
+						Party Trays | Packed Meals | Celebration Cakes | Full Catering
+					</h2>
 				</div>
 				<div class="card-grid">
 					<article class="card">
@@ -68,8 +70,8 @@
 					<article class="card">
 						<h3>Packed Meals</h3>
 						<p>
-							Individually packed meals ideal for corporate events, seminars, and
-							community programs.
+							Individually packed meals ideal for corporate events, seminars,
+							and community programs.
 						</p>
 					</article>
 					<article class="card">
