--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
 				<span class="hero-pill">Say hello</span>
 				<h1>Reach Jeana's Kitchen online</h1>
 				<p>
-					Send us a message anytime through Facebook and we'll reply with our next
-					available slot, menu suggestions, and delivery details.
+					Send us a message anytime through Facebook and we'll reply with our
+					next available slot, menu suggestions, and delivery details.
 				</p>
 			</div>
 		</header>
@@ -60,8 +60,8 @@
 				<div class="contact-grid">
 					<div>
 						<p>
-							For updates, inquiries, and orders, send us a message directly through
-							our Facebook page.
+							For updates, inquiries, and orders, send us a message directly
+							through our Facebook page.
 						</p>
 						<ul class="meta-list">
 							<li>
